renamed the hr analytics to department
